# tram

./: Cargo.toml  Readme.md
packaging/systemd/: tram_btrfs.service
src/: cli.rs  globals.rs  instruction.txt  main.rs
src/core/: app_config.rs  btrfs_manager.rs  error.rs  mod.rs  subvolume.rs  utils.rs
src/core/btrfs_objects/: group.rs  group_snapshot.rs  mod.rs  snapshot.rs  snapshot_group.rs  snapshot_type.rs  subvolume.rs  subvolume_snapshot.rs
src/tui/: app_tui.rs  broken_snapshots_ui.rs  groups_ui.rs  menu.rs  mod.rs  settings_ui.rs  snapshots_ui.rs  subvolumes_ui.rs  ui_states.rs
