[package]
name = "tram"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
file-lock = "2.1.11"
nix = { version = "0.31.2", features = ["mount", "user"] }
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive", "std"] }
thiserror = "2.0.18"
toml = "1.1.2"
